New changes for async calc
